--- a/flexbox.css
+++ b/flexbox.css
@@ -1,11 +1,13 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 
 .frame {
 	width: 600px;
 	margin: 0 auto;
+	padding: 10px 0;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -63,3 +65,29 @@ main.row {
 .footer {
 	padding: 0.5em;
 }
+
+
+.control {
+	position: absolute;
+	left: 10px;
+	top: 10px;
+	font-size: 18px;
+}
+
+.control .item {
+	margin: 0 4px;
+}
+
+
+.frame:target header.row {
+	background: #F3D270;	
+}
+
+.frame:target main.row {
+	background: #EB7F87;	
+}
+
+.frame:target footer.row {
+	background: #99A244;	
+}
+
