--- a/grid.css
+++ b/grid.css
@@ -1,74 +1,77 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
 }
 
 body {
-	font-family: Calibri, Arial;
+   font-family: Calibri, Arial;
 }
 
 .plain-html {
 }
 
 .frame {
-	width: 600px;
-	margin: 0 auto;
-	padding: 10px 0;
-	/*min-height: 100vh;*/
+   width: 600px;
+   margin: 0 auto;
+   padding: 10px 0;
+   /*min-height: 100vh;*/
 }
 
 .frame > * {
-	border: 2px solid black;
-	font-size: 35px;
-	font-weight: bold;
-	padding: 0.5em;
+   border: 2px solid black;
+   font-size: 35px;
+   font-weight: bold;
+   padding: 0.5em;
 }
 
-
 .frame {
-	display: grid;
-	grid-template-columns: 100px auto 120px;
-	grid-template-rows: auto;
+   display: grid;
+}
+
+.define-grid .frame {
+   grid-template-columns: 100px auto 120px;
+   grid-template-rows: auto;
 }
 
 
 .define-lines main {
-	grid-column-start: 1;
-	grid-column-end: 3;
-	grid-row-start: 2;
-	grid-row-end: 3;
+/* grid-column-start: 1;
+   grid-column-end: 3;
+   grid-row-start: 2;
+   grid-row-end: 3;*/
+   grid-area: 2 / 1 / 3 / 3;
 }
 .define-lines .logo {
-	grid-column-start: 1;
-	grid-column-end: 2;
-	grid-row-start: 1;
-	grid-row-end: 2;
+   grid-column-start: 1;
+   grid-column-end: 2;
+   grid-row-start: 1;
+   grid-row-end: 2;
 }
 
 .define-lines header {
-	grid-column-start: 2;
-	grid-column-end: 4;
-	grid-row-start: 1;
-	grid-row-end: 2;
+   grid-column-start: 2;
+   grid-column-end: 4;
+   grid-row-start: 1;
+   grid-row-end: 2;
 }
 
 .define-lines aside {
-	grid-column-start: 3;
-	grid-column-end: 4;
-	grid-row-start: 2;
-	grid-row-end: 3;	
+   grid-column-start: 3;
+   grid-column-end: 4;
+   grid-row-start: 2;
+   grid-row-end: 3;  
 }
 
 .define-lines footer {
-	grid-column-start: 1;
-	grid-column-end: 4;
-	grid-row-start: 3;
-	grid-row-end: 4;	
+   grid-column-start: 1;
+   grid-column-end: 4;
+   grid-row-start: 3;
+   grid-row-end: 4;  
 }
 
 .show-lines .line {
-	/*outline: 2px solid red;*/
+   /*outline: 2px solid red;*/
 }
 
 .show-lines .line1 {
@@ -102,7 +105,7 @@ body {
 }
 
 .show-lines .line2 {
-	border-right: 5px solid blue;
+   border-right: 5px solid blue;
 }
 
 
@@ -111,4 +114,61 @@ body {
   grid-row: 1 / 2;
   border: 5px solid rgba(0,0,250, 0.4);
   background: rgba(0,0,250, 0.4);
+}
+
+.cell1 {
+   grid-column: 3 / 4;
+   grid-row: 1 / 2;
+   border: 5px solid rgba(0,0,250, 0.4);
+   background: rgba(0,0,250, 0.4);
+}
+
+.area1 {
+   grid-column: 1/3;
+   grid-row: 2/4;
+   border: 5px solid rgba(0,0,250, 0.35);
+   background: rgba(0,0,250, 0.35);
+}
+
+.named_grid_lines .frame {
+   display: grid;
+   grid-template-columns: (first) 100px (main-start) auto (main-end) 120px (last);
+   grid-template-rows: (first header) 80px (main) auto (footer) 80px (last);
+}
+
+.area2 {
+   grid-column: main-start / main-end;
+   grid-row: main / footer;
+   border: 5px solid rgba(0,0,250, 0.35);
+   background: rgba(0,0,250, 0.35);
+}
+
+.named_grid_areas .frame {
+   grid-template-columns: none;
+   grid-template-rows: none;
+   grid-template-areas: "logo   header header"
+                        "main   main   side"
+                        "footer footer footer";
+}
+
+.area3 {
+   grid-area: main;
+   border: 5px solid rgba(0,0,250, 0.35);
+   background: rgba(0,0,250, 0.35);
+}
+
+.named_grid_areas header {
+   grid-area: header;
+}
+
+.named_grid_areas footer {
+   grid-area: footer;
+}
+
+.named_grid_areas aside {
+   grid-area: side;
+}
+
+.named_grid_areas .logo {
+   grid-area: logo;
 }
