--- a/grid.css
+++ b/grid.css
@@ -29,6 +29,11 @@ body {
    display: grid;
 }
 
+.shorthands .frame {
+   grid-template-columns: 100px auto 120px;
+   grid-template-rows: auto;
+}
+
 .define-grid .frame {
    grid-template-columns: 100px auto 120px;
    grid-template-rows: auto;
@@ -36,12 +41,19 @@ body {
 
 
 .define-lines main {
-/* grid-column-start: 1;
-   grid-column-end: 3;
-   grid-row-start: 2;
-   grid-row-end: 3;*/
-   grid-area: 2 / 1 / 3 / 3;
+   grid-column-start: 1; 
+    grid-column-end: 3; 
+    grid-row-start: 2; 
+    grid-row-end: 3; 
+   
 }
+
+.shorthands main {
+  grid-area: 2 / 1 / 3 / 3;
+    /*grid-column: 1 / 3;*/
+    /*grid-row: 2 / 3;*/
+}
+
 .define-lines .logo {
    grid-column-start: 1;
    grid-column-end: 2;
@@ -132,7 +144,7 @@ body {
 
 .named_grid_lines .frame {
    display: grid;
-   grid-template-columns: (first) 100px (main-start) auto (main-end) 120px (last);
+   grid-template-columns: (main-start) 100px auto (main-end) 120px (end);
    grid-template-rows: (first header) 80px (main) auto (footer) 80px (last);
 }
 
